--- a/static/styles/jsdoc-default.css
+++ b/static/styles/jsdoc-default.css
@@ -58,19 +58,18 @@ body > header {
     border-bottom: 1px solid #dcdcdc;
     display: grid;
     grid-auto-flow: column;
-    grid-template-columns: min-content 1fr;
+    grid-template-columns: 265px 1fr 225px;
     grid-template-rows: 60px;
     align-items: center;
     justify-items: center;
 }
 
-header {
-    display: block;
-    padding: 0 4px;
+.hidden {
+    display: none;
 }
 
-header h1, header h2, header h3, header h4 {
-    margin-bottom: 0;
+header {
+    display: block;
 }
 
 tt, code, kbd, samp {
@@ -88,6 +87,7 @@ tt, code, kbd, samp {
     grid-column-gap: 10px;
     align-items: center;
     line-height: 1.3;
+    justify-self: start;
 }
 
 .package-name {
@@ -109,6 +109,10 @@ tt, code, kbd, samp {
     font-size: 0.65em;
 }
 
+.page-header .page-title {
+    margin: 0;
+}
+
 .class-description {
     font-size: 130%;
     line-height: 140%;
@@ -120,11 +124,7 @@ tt, code, kbd, samp {
     margin: 0;
 }
 
-.overview-description {
-    margin: 1em 0;
-}
-
-.overview-description blockquote {
+.description blockquote {
     border: 1px solid #c1c7d0;
     border-left-width: 6px;
     color: #7a869a;
@@ -132,11 +132,24 @@ tt, code, kbd, samp {
     margin: 8px 0;
 }
 
-.overview-description blockquote p {
+.description blockquote p {
     margin: 0;
 }
 
-.overview-description code {
+.class-signature pre {
+    white-space: nowrap;
+}
+
+.class-signature pre code, 
+.example pre code, 
+.readme pre code, 
+.description pre code {
+    display: block;
+    padding: 10px 20px;
+    border: 1px solid #ccc;
+}
+
+code {
     padding: 3px 6px;
     margin: 0;
     font-size: 85%;
@@ -147,14 +160,26 @@ tt, code, kbd, samp {
 main {
     height: 100%;
     overflow: scroll;
+    display: grid;
+    grid-template-columns: 1fr 225px;
 }
 
-main > section {
+main > .content-container {
+    grid-row: 1;
     display: block;
     padding: 12px 24px;
     margin: 15px 15px 15px 0;
     border: 1px solid #dcdcdc;
     background: white;
+}
+
+main > .content-aside {
+    grid-row-start: 1;
+    grid-row-end: span 2;
+}
+
+main > .content-aside .content-nav {
+    height: calc(100vh - 60px);
 }
 
 .main-page .readme h2 {
@@ -178,6 +203,10 @@ main > section {
     display: block;
 }
 
+.section-header .page-title {
+    display: none;
+}
+
 article dl {
     margin-bottom: 40px;
 }
@@ -187,17 +216,28 @@ article img {
 }
 
 article article {
-    padding: 0;
+    position: relative;
+    padding: 12px 18px;
     margin-bottom: 8px;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     border: 1px solid #ccc;
     border-left: 2px solid #aaa;
 }
 
-article article > * {
-    padding-left: 12px;
+article article:before {
+    content: "";
+    display: block;
+    position: absolute;
     border-left: 0.5em solid #ccc;
+    top: 0;
+    bottom: 0;
+    left: 0;
+}
+
+section:not(:last-child) {
+    margin-bottom: 12px;
 }
 
 .variation {
@@ -214,40 +254,20 @@ article article > * {
 nav {
     display: block;
     box-sizing: border-box;
-    padding: 0 30px 15px 15px;
     margin-top: 15px;
     overflow: scroll;
 }
 
 nav ul {
-    font-family: 'Lucida Grande', 'Lucida Sans Unicode', arial, sans-serif;
-    font-size: 100%;
-    padding: 0 0 0 10px;
     margin: 0;
     list-style-type: none;
+    padding: 0;
 }
 
 nav ul ul {
     padding-left: 15px;
     margin-bottom: 18px;
     border-left: 2px solid #ddd;
-}
-
-nav ul li:not(.active) ul {
-    display: none;
-}
-
-nav ul ul ul {
-    padding-left: 15px;
-}
-
-nav ul a, nav ul a:visited, nav ul a:active {
-    font-family: Consolas, Monaco, 'Andale Mono', monospace;
-    display: block;
-}
-
-nav ul ul a:not(.active), nav ul ul a:not(.active):visited, nav ul ul a:not(.active):active {
-    color: #4D4E53;
 }
 
 nav li {
@@ -260,6 +280,52 @@ nav a.active {
 
 nav > h1, nav > h2, nav > h3, nav > h4, nav > h5, nav > h6 {
     border-bottom: 1px solid #ddd;
+}
+
+nav.page-nav {
+    padding: 0 30px 15px 15px;
+}
+
+nav.page-nav ul {
+    font-family: 'Lucida Grande', 'Lucida Sans Unicode', arial, sans-serif;
+    font-size: 100%;
+    padding: 0 0 0 10px;
+}
+
+nav.page-nav ul li:not(.active) ul {
+    display: none;
+}
+
+nav.page-nav ul ul ul {
+    padding-left: 15px;
+}
+
+nav.page-nav ul a,
+nav.page-nav ul a:visited,
+nav.page-nav ul a:active {
+    font-family: Consolas, Monaco, 'Andale Mono', monospace;
+    display: block;
+}
+
+nav.page-nav ul ul a:not(.active),
+nav.page-nav ul ul a:not(.active):visited,
+nav.page-nav ul ul a:not(.active):active {
+    color: #4D4E53;
+}
+
+nav.content-nav {
+    position: sticky;
+    top: 1px;
+}
+
+nav.content-nav .toc-title {
+    background-color: #f1f1f7;
+    position: sticky;
+    top: 0;
+}
+
+nav.content-nav li a + ul {
+    margin-top: 8px;
 }
 
 footer {
@@ -298,16 +364,31 @@ h4 {
     color: #4d4e53;
 }
 
-h5, .container-overview .subsection-title {
+h5 {
     font-size: 120%;
     font-weight: bold;
-    margin: 8px 0 3px 0;
+    /*margin: 8px 0 3px 0;*/
+    margin: 0 0 8px;
 }
 
 h6 {
     font-size: 100%;
     margin: 6px 0 3px 0;
     font-style: italic;
+}
+
+.subsection-title, .description h1, .description h2, .description h3, .description h4 {
+    border-bottom: 1px solid #ddd;
+}
+
+.subsection-list > li,
+.readme .description > ul > li {
+    margin-bottom: 1em;
+}
+
+.subsection-list > li ul,
+.readme .description > ul > li ul {
+    margin-top: 0.5em;
 }
 
 table {
@@ -370,36 +451,40 @@ tr > th:last-child {
 }
 
 .details dl {
-    margin: 14px 0;
+    margin: 0;
     border-left: 2px solid #DDD;
+    display: grid;
+    grid-row-gap: 5px;
 }
 
-.details dt {
-    width: 120px;
-    float: left;
+.details dl .detail {
+    display: grid;
+    grid-template-columns: 120px 1fr;
     padding-left: 10px;
-    padding-top: 6px;
 }
 
 .details dd {
-    margin-left: 70px;
-}
-
-.details ul {
     margin: 0;
 }
 
 .details ul {
+    margin: 0;
     list-style-type: none;
 }
 
 .details li {
-    margin-left: 30px;
     padding-top: 6px;
 }
 
 .details pre.prettyprint {
-    margin: 0
+    margin: 0;
+    display: inline-block;
+}
+
+.details pre code {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
 }
 
 .details .object-value {
@@ -417,25 +502,22 @@ tr > th:last-child {
     margin: 0;
 }
 
-.source {
-    border: 1px solid #ddd;
-    width: 80%;
-    overflow: auto;
-}
+/*.source {*/
+/*    border: 1px solid #ddd;*/
+/*    width: 80%;*/
+/*    overflow: auto;*/
+/*}*/
 
-.prettyprint.source {
-    width: inherit;
-}
+/*.prettyprint.source {*/
+/*    width: inherit;*/
+/*}*/
 
-.source code {
-    font-size: 100%;
-    line-height: 18px;
-    display: block;
-    padding: 4px 12px;
-    margin: 0;
-    background-color: #fff;
-    color: #4D4E53;
-}
+/*.source code {*/
+/*    font-size: 100%;*/
+/*    line-height: 18px;*/
+/*    display: block;*/
+/*    color: #4D4E53;*/
+/*}*/
 
 .prettyprint code span.line {
     display: inline-block;
@@ -457,8 +539,7 @@ tr > th:last-child {
     border-left: 3px #ddd solid;
 }
 
-.prettyprint.linenums li.selected,
-.prettyprint.linenums li.selected * {
+.prettyprint.linenums li.selected, .prettyprint.linenums li.selected * {
     background-color: lightyellow;
 }
 
@@ -469,20 +550,18 @@ tr > th:last-child {
     user-select: text;
 }
 
-.params .name, .props .name, .name code {
+.params .name, .props .name, .name code, .readme .description code {
     color: #4D4E53;
     font-family: Consolas, Monaco, 'Andale Mono', monospace;
     font-size: 100%;
 }
 
-.params td.description > p:first-child,
-.props td.description > p:first-child {
+.params td.description > p:first-child, .props td.description > p:first-child {
     margin-top: 0;
     padding-top: 0;
 }
 
-.params td.description > p:last-child,
-.props td.description > p:last-child {
+.params td.description > p:last-child, .props td.description > p:last-child {
     margin-bottom: 0;
     padding-bottom: 0;
 }
