--- a/static/classy.css
+++ b/static/classy.css
@@ -178,12 +178,6 @@ a:hover {
     font-family: Consolas, Monaco, 'Andale Mono', monospace;
 }
 
-td.type .param {
-    display: inline-flex;
-    flex-wrap: wrap;
-    width: min-content;
-}
-
 /* Returns Styling */
 .returns dt {
     float: left;
@@ -812,7 +806,6 @@ code, .hljs {
     color: var(--colour-text-main);
     font-family: Consolas, Monaco, 'Andale Mono', monospace;
     font-size: 100%;
-    white-space: nowrap;
 }
 
 .params td.description > p:first-child,
@@ -943,7 +936,7 @@ code, .hljs {
     }
     
     /* Wrap param types in tables */
-    td.type .param, td.type .param-type {
+    td.type .param-type {
         display: block;
     }
     
