--- a/static/classy.css
+++ b/static/classy.css
@@ -229,8 +229,7 @@ header {
     height: 100%;
     display: grid;
     grid-template-rows: 100%;
-    grid-auto-flow: column;
-    grid-auto-columns: max-content;
+    grid-template-columns: auto 1fr;
     grid-column-gap: 10px;
     align-items: center;
     justify-self: start;
@@ -250,6 +249,7 @@ header {
 
 /* Package Logo */
 .page-header .package-name img {
+    width: 100%;
     max-width: 100%;
     max-height: 100%;
     box-sizing: border-box;
