--- a/static/classy.css
+++ b/static/classy.css
@@ -60,6 +60,9 @@
 }
 
 html {
+    width: 100vw;
+    /*height: 100vh;*/
+    overflow-x: hidden;
     font-size: 0.875rem;
 }
 
@@ -71,7 +74,6 @@ body {
     margin: 60px 0 0;
     display: grid;
     grid-template-columns: max-content 1fr;
-    grid-template-rows: calc(100vh - 60px - env(safe-area-inset-top, 20px));
 }
 
 /********************************/
@@ -181,6 +183,10 @@ td.type .param {
     display: inline-flex;
     flex-wrap: wrap;
     width: min-content;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 4px;
+    white-space: nowrap;
 }
 
 /* Returns Styling */
@@ -202,6 +208,10 @@ td.type .param {
 /********************************/
 header {
     display: block;
+}
+
+[id] {
+    scroll-margin-top: 60px;
 }
 
 .page-header {
@@ -301,7 +311,7 @@ header {
 main {
     height: 100%;
     display: grid;
-    grid-template-columns: calc(100vw - var(--gutter-width-left) - var(--gutter-width-right)) min-content;
+    grid-template-columns: calc(100% - var(--gutter-width-right)) var(--gutter-width-right);
     grid-template-rows: max-content 1fr;
 }
 
@@ -315,6 +325,7 @@ main > .content-container {
     background: var(--colour-bg-content);
     justify-self: end;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 main > .content-aside {
@@ -323,8 +334,9 @@ main > .content-aside {
 }
 
 main > .content-aside .content-nav {
-    height: calc(100vh - 61px - 15px);
+    height: 100%;
     margin: 0;
+    overflow-y: auto;
 }
 
 /********************************/
@@ -484,6 +496,11 @@ nav.page-nav {
     min-width: var(--gutter-width-left);
 }
 
+nav.page-nav .nav-content {
+    position: sticky;
+    top: 60px;
+}
+
 nav.page-nav ul {
     font-family: 'Lucida Grande', 'Lucida Sans Unicode', arial, sans-serif;
     font-size: 100%;
@@ -516,8 +533,9 @@ nav.page-nav ul ul a:not(.active):active {
 /********************************/
 .toc-regular {
     position: sticky;
-    top: 0;
+    top: 60px;
     margin-top: 15px;
+    height: calc(100vh - 60px);
 }
 
 .toc-tiny {
@@ -823,6 +841,23 @@ code, .hljs {
     padding-bottom: 0;
 }
 
+td.default pre.prettyprint {
+    margin: 0;
+    display: flex;
+}
+
+td.default pre code {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    padding: 3px 6px;
+    border: unset;
+}
+
+td.default pre code:empty {
+    display: none;
+}
+
 /********************************/
 /*  Small Display Nav Styling   */
 /********************************/
@@ -989,7 +1024,7 @@ code, .hljs {
     }
     
     /* Enable wide content scrolling */
-    .params .subsection-content, .props dd {
+    .params .subsection-content, .props .subsection-content {
         overflow-x: scroll;
         position: relative;
         z-index: 1;
@@ -999,13 +1034,13 @@ code, .hljs {
     }
     
     .params .subsection-content table,
-    .props table {
+    .props .subsection-content table {
         position: relative;
     }
     
     /* Enable left scroll gutter */
     .params .subsection-content:before,
-    .props dd:before {
+    .props .subsection-content:before {
         position: sticky;
         content: "";
         display: flex;
@@ -1016,7 +1051,7 @@ code, .hljs {
     }
     
     .params .subsection-content table:before,
-    .props table:before {
+    .props .subsection-content table:before {
         position: absolute;
         content: "";
         display: block;
@@ -1028,13 +1063,13 @@ code, .hljs {
     }
     
     .params .subsection-content table tr :first-child,
-    .props table tr :first-child {
+    .props .subsection-content table tr :first-child {
         border-left-width: 0;
     }
     
     /* Enable right scroll gutter */
     .params .subsection-content:after,
-    .props dd:after {
+    .props .subsection-content:after {
         position: sticky;
         content: "";
         display: flex;
@@ -1045,7 +1080,7 @@ code, .hljs {
     }
     
     .params .subsection-content table:after,
-    .props table:after {
+    .props .subsection-content table:after {
         position: absolute;
         content: "";
         display: block;
@@ -1057,7 +1092,7 @@ code, .hljs {
     }
     
     .params .subsection-content table tr :last-child,
-    .props table tr :last-child {
+    .props .subsection-content table tr :last-child {
         border-right-width: 0;
     }
     
